[project]
name = "trace-summary"
dynamic = ["version"]
description = "Generates network traffic summaries"
dependencies = [
  "pysubnettree"
]

requires-python = ">=3.10"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: BSD :: FreeBSD',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3',
    'Topic :: System :: Networking',
    'Topic :: Utilities',
]

[project.urls]
Repository = "https://github.com/zeek/trace-summary"

[[project.maintainers]]
  name = "The Zeek Team"
  email = "info@zeek.org"

[build-system]
requires = ["setuptools"]

[tool.ruff.lint]
select = ["C4", "F", "I", "ISC", "UP"]

[tool.setuptools]
script-files = ["trace-summary"]
packages = []

[tool.setuptools.data-files]
"share/man/man1" = ["trace-summary.1",]
